discussion/kv_engine/175320/175320_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Store keys in testapp_rangescan

Tests are unstable without the storage and wait-for-persistence as
we may race ahead of vbucket creation and hit a failure from
range-scan-create.

Change-Id: Ibcd459058c20876a11a8b69debcf55630d2c6ab9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-25 08:29:10.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-25 08:46:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46413/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27924/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27924/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7359/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7359/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19875/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19875/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20538/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20538/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19526/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19526/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17746/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_range_scan.cc:26:9: error: use of undeclared identifier "mInfo" [clang-diagnostic-error]
        mInfo = storeTestKeys();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_range_scan.cc:35:31: error: use of undeclared identifier "mInfo" [clang-diagnostic-error]
                   {{"seqno", mInfo.seqno},
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_range_scan.cc:36:33: error: use of undeclared identifier "mInfo" [clang-diagnostic-error]
                    {"vb_uuid", mInfo.vbucketuuid},
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17746/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_range_scan.cc:26:9:
error: use of undeclared identifier "mInfo" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17746/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18723/ : FAILURE

Compile error at [2022-05-25T08:44:15.312Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_range_scan.cc:26:9:
error: use of undeclared identifier "mInfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18723/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7461/ : FAILURE

Compile error at [2022-05-25T08:44:22.775Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_range_scan.cc:26:9:
error: ?mInfo? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7461/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16780/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39000/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
